--- a/packages/dcbmui/package.json
+++ b/packages/dcbmui/package.json
@@ -22,7 +22,5 @@
     "type": "git",
     "url": "https://github.com/Leezon/dcbmui"
   },
-  "dependencies": {
-    "@dcbmui/utils": "^1.0.0"
-  }
+  "dependencies": {}
 }
