--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -17,9 +17,9 @@
   "dependencies": {
     "chalk": "^5.2.0",
     "command-line-args": "^5.2.1",
+    "command-line-usage": "^6.1.3",
     "download-git-repo": "^3.0.2",
     "ora": "^6.1.2",
-    "prompts": "^2.4.2",
-    "command-line-usage": "^6.1.3"
+    "prompts": "^2.4.2"
   }
 }
