--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "build:dcbmui": "gulp -f packages/components/script/build/index.ts & pnpm run --filter ./packages/utils build",
+    "build:utils": "pnpm run --filter ./packages/utils build",
     "publish:dcbmui": "gulp -f packages/components/script/publish/index.ts",
     "publish:dcbmuiutils": "gulp -f packages/utils/publish/index.ts",
     "docs:dev": "pnpm run --filter site docs:dev",
@@ -52,6 +53,7 @@
     "sucrase": "^3.29.0",
     "typescript": "^4.9.5",
     "unplugin-vue-define-options": "^1.2.1",
+    "vant": "^4.2.0",
     "vite": "^3.0.9",
     "vite-plugin-dts": "^1.4.1",
     "vitest": "^0.29.2",
